--- a/templates/index.html
+++ b/templates/index.html
@@ -22,21 +22,24 @@
     <div class="col-lg-8 col-md-10 mx-auto">
 
 <!-- Should be come from database using loop -->
+{%for post in posts%}
       <div class="post-preview">
-        <a href="post.html">
+        <a href="/post/{{post.slug}}">
           <h2 class="post-title">
-            Man must explore, and this is exploration at its greatest
+            {{post.title}}
           </h2>
           <h3 class="post-subtitle">
-            Problems look mighty small from 150 miles up
+           {{post.tagline}}
           </h3>
         </a>
         <p class="post-meta">Posted by
-          <a href="#">Start Bootstrap</a>
-          on September 24, 2019</p>
+          <a href="#">Admin</a>
+          on {{post.date}}</p>
       </div>
+      {{post.content[0:50]}}...
       <hr>
-      
+      </li></a>
+      {%endfor%}
       <!-- Pager -->
       <div class="clearfix">
         <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
