--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
       {%endfor%}
       <!-- Pager -->
       <div class="clearfix">
+      {% if number!=0 %}
+      <a class="btn btn-primary float-left" href="#">&larr; Newer Posts</a>
+      {% endif %}
         <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
       </div>
     </div>
