--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,6 +16,10 @@
 </header>
 <div class="container">
 <h3>Upload a file</h3>
+<form action='/uploader' method="post" enctype="multipart/form-data">
+<input type="file" name="file1">
+<button class="btn btn-success" type="submit">Submit</button>
+</form>
 <h3>Basic Actions</h3>
 <a href='/edit/0'><button class='btn btn-primary'>Add a new post</button></a>
 <a href='/logout'><button class='btn btn-primary'>Logout</button></a>
@@ -40,7 +44,7 @@
       <td>{{post.title}}</td>
       <td>{{post.date}}</td>
       <td><a href="/edit/{{post.sno}}"><button class='btn btn-primary'>Edit</button></a></td>
-      <td><button class='btn btn-danger'>Delete</button></td>
+      <td><a href="/delete/{{post.sno}}"><button class='btn btn-danger'>Delete</button></a></td>
     </tr>
 
 {%endfor%}
