Databse file added , bug fixed

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url(       {{url_for('static',filename='img/contact-bg.jpg')}}    )">
+<header class="masthead" style="background-image: url(       {{url_for('static',filename='img/StockSnap_FA9F1TRJFZ.jpg')}}    )">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
