--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 <!-- Page Header -->
-<header class="masthead" style="background-image: url({{url_for('static',filename='img/contact-bg.jpg')}})">
+<header class="masthead" style="background-image: url({{url_for('static',filename='img/StockSnap_CCUEGVL7HU.jpg')}})">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -29,7 +29,7 @@
 
 
 
-<form name="sentMessage" id="contactForm" action='/edit/{{post.sno}}' method="post" novalidate>
+<form name="sentMessage" id="contactForm" action='/edit/{{sno}}' method="post" novalidate>
 <h4>Add/Edit post</h4>
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
