--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url({{url_for('static',filename='img/about-bg.jpg')}})">
+<header class="masthead" style="background-image: url({{url_for('static',filename='img/StockSnap_F7AEBU9901.jpg')}})">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
