--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,12 @@
 
-{% extends "layout.html" %}
-{% block body %}
+{# {% extends "layout.html" %}
+{% block body %} #}
+<!-- Bootstrap core CSS -->
+    
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/signin.css" rel="stylesheet">
 <div class="text-center">
     <form class="form-signin" action='/dashboard' method="post">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
@@ -9,13 +15,13 @@
       <input type="text" id="inputEmail" name='uname' class="form-control" placeholder="user name" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" name="pass" class="form-control" placeholder="Password" required>
-      <div class="checkbox mb-3">
+      {# <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
-      </div>
+      </div> #}
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-muted">&copy; {{params['blog_name']}} 2017-2018</p>
     </form>
     </div>
-  {% endblock %}
+  {# {% endblock %} #}
